<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>eu.kalafatic.evolution</groupId>
		<artifactId>eu.kalafatic.evolution.view</artifactId>
		<version>2.6.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<artifactId>eu.kalafatic.evolution.controller</artifactId>
	<packaging>eclipse-plugin</packaging>
	<properties>
		<tycho.targetPlatform>platform</tycho.targetPlatform>
		<tycho.version>4.0.5</tycho.version>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>icons</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<!--Enable the replacement of the SNAPSHOT version in the final product configuration-->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<id>package-feature</id>
						<configuration>
							<finalName>
								${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
						</configuration>
					</execution>

				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<executionEnvironment>JavaSE-21</executionEnvironment>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>-Xlint:unchecked</arg>
						<arg>--add-modules</arg>
						<arg>org.json</arg>
					</compilerArgs>
				</configuration>
			</plugin>

		</plugins>

	</build>
	<repositories>
		<repository>
			<id>eclipse</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/releases/2025-12</url>
		</repository>
	</repositories>


	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20240303</version>
				<scope>compile</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>eu.kalafatic.evolution</groupId>
			<artifactId>eu.kalafatic.evolution.view</artifactId>
			<version>2.6.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>eu.kalafatic.utils</groupId>
			<artifactId>eu.kalafatic.utils</artifactId>
			<version>2.6.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
		</dependency>

	</dependencies>

	<groupId>eu.kalafatic.evolution</groupId>
</project>